--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/HappyGoose"
+    android:background="@mipmap/happy_goose"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/tv_Oca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="96dp"
         android:text="Joc de l'oca"
         android:textColor="@color/white"
         android:textSize="34sp"
@@ -22,65 +22,128 @@
 
     <EditText
         android:id="@+id/et_Jugador1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="40dp"
-        android:text="Jugador1"
-        android:textColor="@color/white"
+        android:layout_marginEnd="20dp"
+        android:hint="Jugador1"
+        android:textColorHint="@color/white"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_CJugador1"
         app:layout_constraintEnd_toStartOf="@+id/et_Jugador2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Oca"
-        app:layout_constraintBottom_toTopOf="@+id/tv_Jugador1"/>
+        app:layout_constraintWidth_percent="0.4" />
 
     <EditText
         android:id="@+id/et_Jugador2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
-        android:text="Jugador2"
-        android:textColor="@color/white"
+        android:hint="Jugador2"
+        android:textColorHint="@color/white"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_CJugador2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/et_Jugador1"
         app:layout_constraintTop_toBottomOf="@+id/tv_Oca"
-        app:layout_constraintBottom_toTopOf="@+id/tv_Jugador2"/>
+        app:layout_constraintWidth_percent="0.4" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btntirar"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginBottom="72dp"
         android:backgroundTint="@color/teal_200"
         android:onClick="onLogin"
-        android:text="Tirar Dau"
+        android:text="Iniciar Partida"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_Jugador1"
+        android:id="@+id/tv_CJugador1"
         android:layout_width="50dp"
-        android:layout_height="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="50dp"
         android:background="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/tv_Jugador2"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@id/tv_nJugador1"
+        app:layout_constraintEnd_toStartOf="@+id/tv_CJugador2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Jugador1" />
 
     <TextView
-        android:id="@+id/tv_Jugador2"
+        android:id="@+id/tv_CJugador2"
         android:layout_width="50dp"
-        android:layout_height="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="8dp"
         android:background="@color/black"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/tv_nJugador2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_Jugador1"
+        app:layout_constraintStart_toEndOf="@id/tv_CJugador1"
         app:layout_constraintTop_toBottomOf="@+id/et_Jugador2" />
 
+    <TextView
+        android:id="@+id/tv_nJugador1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="60dp"
+        android:text="1"
+        android:textColor="@color/black"
+        android:textSize="84dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toStartOf="@id/tv_nJugador2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_CJugador1" />
+
+    <TextView
+        android:id="@+id/tv_nJugador2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="140dp"
+        android:text="1"
+        android:textColor="@color/black"
+        android:textSize="84dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_nJugador1"
+        app:layout_constraintTop_toBottomOf="@+id/tv_CJugador2" />
+
+    <TextView
+        android:id="@+id/tv_alerta"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="120dp"
+        android:background="@color/yellow"
+        android:text="@string/alerta"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_Oca" />
+
+    <TextView
+        android:id="@+id/tv_dau"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="72dp"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        android:textSize="60dp"
+        android:gravity="center"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/btntirar"
+        app:layout_constraintEnd_toStartOf="@id/tv_nJugador2"
+        app:layout_constraintStart_toEndOf="@id/tv_nJugador1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
