falta pulir logica

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,12 @@
         android:id="@+id/et_Jugador1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:hint="Jugador1"
         android:textColorHint="@color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_CJugador1"
+        app:layout_constraintBottom_toTopOf="@+id/tv_alerta"
         app:layout_constraintEnd_toStartOf="@+id/et_Jugador2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Oca"
@@ -40,11 +40,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:hint="Jugador2"
         android:textColorHint="@color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_CJugador2"
+        app:layout_constraintBottom_toTopOf="@+id/tv_alerta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/et_Jugador1"
         app:layout_constraintTop_toBottomOf="@+id/tv_Oca"
@@ -68,9 +68,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="50dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/black"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@id/tv_nJugador1"
+        app:layout_constraintBottom_toTopOf="@id/tv_alerta"
         app:layout_constraintEnd_toStartOf="@+id/tv_CJugador2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Jugador1" />
@@ -81,18 +82,43 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/black"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/tv_nJugador2"
+        app:layout_constraintBottom_toTopOf="@+id/tv_alerta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_CJugador1"
         app:layout_constraintTop_toBottomOf="@+id/et_Jugador2" />
+
+    <ImageView
+        android:id="@+id/iv_OcaJugador1"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="60dp"
+        android:background="@mipmap/casellaoca"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toStartOf="@id/iv_OcaJugador2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_alerta" />
+
+    <ImageView
+        android:id="@+id/iv_OcaJugador2"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="32dp"
+        android:background="@mipmap/casellaoca"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_OcaJugador1"
+        app:layout_constraintTop_toBottomOf="@+id/tv_alerta" />
 
     <TextView
         android:id="@+id/tv_nJugador1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="60dp"
         android:text="1"
         android:textColor="@color/black"
@@ -100,21 +126,21 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@id/tv_nJugador2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_CJugador1" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_OcaJugador1" />
 
     <TextView
         android:id="@+id/tv_nJugador2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="48dp"
         android:text="1"
         android:textColor="@color/black"
         android:textSize="84dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_nJugador1"
-        app:layout_constraintTop_toBottomOf="@+id/tv_CJugador2" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_OcaJugador2" />
 
     <TextView
         android:id="@+id/tv_alerta"
@@ -136,11 +162,11 @@
         android:id="@+id/tv_dau"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="48dp"
         android:background="@color/black"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="60dp"
-        android:gravity="center"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btntirar"
         app:layout_constraintEnd_toStartOf="@id/tv_nJugador2"
