--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,18 +158,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_Oca" />
 
-    <TextView
-        android:id="@+id/tv_dau"
+    <ImageView
+        android:id="@+id/iv_dau"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginBottom="48dp"
-        android:background="@color/black"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="60dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btntirar"
-        app:layout_constraintEnd_toStartOf="@id/tv_nJugador2"
-        app:layout_constraintStart_toEndOf="@id/tv_nJugador1" />
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
