--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="96dp"
         android:text="Joc de l'oca"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,9 +65,8 @@
 
     <TextView
         android:id="@+id/tv_CJugador1"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="80dp"
+        android:layout_height="10dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="8dp"
         android:background="@color/black"
@@ -78,10 +78,9 @@
 
     <TextView
         android:id="@+id/tv_CJugador2"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="10dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/black"
         android:visibility="invisible"
